--- a/src/components/movieList/MovieList.css
+++ b/src/components/movieList/MovieList.css
@@ -1,10 +1,11 @@
 .movie-list {
-    padding: 0 3rem 3rem 3rem;
+    margin: auto 2rem;
+    padding: auto; 
 }
 
 .list-title {
 font-size: 1.75rem;
-margin:  2.5rem;
+margin:  2rem auto;
 }
 
 .list-cards {
