--- a/src/pages/movieDetail/Movie.css
+++ b/src/pages/movieDetail/Movie.css
@@ -1,13 +1,14 @@
 .movie {
-    width: 100%;
+    margin: 0 2rem;
     position: relative;
     display: flex;
     flex-direction:column;
     align-items: center;
+    overflow: hidden;
 }
 
 .movie-intro {
-    width: 80%;
+    width: 100%;
 }
 
 .movie-backdrop {
